--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 .display {
     background-color: gray;
     width: 100%;
-    height: 100%;
+    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
