--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ body {
 .digits {
     font-size: 35px;
     text-align: end;
-    width: 100%;
+    width: 360px;
     padding-right: 20px;
+    overflow: hidden;
+
 }
 
 .result {
